--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Image Resizer",
   "version": "1.0.0",
   "description": "",
-  "main": "main.ts",
+  "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
@@ -12,14 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^26.2.4",
+    "electronmon": "^2.0.2",
     "resize-img": "^2.0.0",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.2",
-    "electron-reload": "^2.0.0-alpha.1",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "prettier": "^3.0.3"
   }
 }
